07_TAD_opaco/TAD_opac_00/Resultados/JoaoHenrique/completo/result_compilation.txt
Resultados/JoaoHenrique/completo/circulo.c: In function ‘Circulo_Cria’:
Resultados/JoaoHenrique/completo/circulo.c:25:30: warning: passing argument 1 of ‘Circulo_Atribui_Raio’ from incompatible pointer type [-Wincompatible-pointer-types]
   25 |         Circulo_Atribui_Raio(circulo, r);
      |                              ^~~~~~~
      |                              |
      |                              struct circulo **
In file included from Resultados/JoaoHenrique/completo/circulo.c:3:
Resultados/JoaoHenrique/completo/circulo.h:69:37: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   69 | void Circulo_Atribui_Raio (tCirculo c, float r);
      |                            ~~~~~~~~~^
Resultados/JoaoHenrique/completo/circulo.c:26:25: warning: initialization of ‘struct ponto **’ from incompatible pointer type ‘tPonto’ {aka ‘struct ponto *’} [-Wincompatible-pointer-types]
   26 |         tPonto *ponto = Pto_Cria(x,y);
      |                         ^~~~~~~~
Resultados/JoaoHenrique/completo/circulo.c:27:32: warning: passing argument 1 of ‘Circulo_Atribui_Centro’ from incompatible pointer type [-Wincompatible-pointer-types]
   27 |         Circulo_Atribui_Centro(circulo, ponto);
      |                                ^~~~~~~
      |                                |
      |                                struct circulo **
In file included from Resultados/JoaoHenrique/completo/circulo.c:3:
Resultados/JoaoHenrique/completo/circulo.h:62:39: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   62 | void Circulo_Atribui_Centro (tCirculo c, tPonto p);
      |                              ~~~~~~~~~^
Resultados/JoaoHenrique/completo/circulo.c:27:41: warning: passing argument 2 of ‘Circulo_Atribui_Centro’ from incompatible pointer type [-Wincompatible-pointer-types]
   27 |         Circulo_Atribui_Centro(circulo, ponto);
      |                                         ^~~~~
      |                                         |
      |                                         struct ponto **
In file included from Resultados/JoaoHenrique/completo/circulo.c:3:
Resultados/JoaoHenrique/completo/circulo.h:62:49: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   62 | void Circulo_Atribui_Centro (tCirculo c, tPonto p);
      |                                          ~~~~~~~^
Resultados/JoaoHenrique/completo/circulo.c:28:16: warning: returning ‘struct circulo **’ from a function with incompatible return type ‘tCirculo’ {aka ‘struct circulo *’} [-Wincompatible-pointer-types]
   28 |         return circulo;
      |                ^~~~~~~
Resultados/JoaoHenrique/completo/main.c: In function ‘main’:
Resultados/JoaoHenrique/completo/main.c:10:25: warning: initialization of ‘struct circulo **’ from incompatible pointer type ‘tCirculo’ {aka ‘struct circulo *’} [-Wincompatible-pointer-types]
   10 |     tCirculo *circulo = Circulo_Cria(cx, cy, cr);
      |                         ^~~~~~~~~~~~
Resultados/JoaoHenrique/completo/main.c:11:21: warning: initialization of ‘struct ponto **’ from incompatible pointer type ‘tPonto’ {aka ‘struct ponto *’} [-Wincompatible-pointer-types]
   11 |     tPonto *ponto = Pto_Cria(px, py);
      |                     ^~~~~~~~
Resultados/JoaoHenrique/completo/main.c:13:34: warning: passing argument 1 of ‘Circulo_Interior’ from incompatible pointer type [-Wincompatible-pointer-types]
   13 |     int valor = Circulo_Interior(circulo, ponto);
      |                                  ^~~~~~~
      |                                  |
      |                                  struct circulo **
In file included from Resultados/JoaoHenrique/completo/main.c:3:
Resultados/JoaoHenrique/completo/circulo.h:77:32: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   77 | int Circulo_Interior (tCirculo c, tPonto p);
      |                       ~~~~~~~~~^
Resultados/JoaoHenrique/completo/main.c:13:43: warning: passing argument 2 of ‘Circulo_Interior’ from incompatible pointer type [-Wincompatible-pointer-types]
   13 |     int valor = Circulo_Interior(circulo, ponto);
      |                                           ^~~~~
      |                                           |
      |                                           struct ponto **
In file included from Resultados/JoaoHenrique/completo/main.c:3:
Resultados/JoaoHenrique/completo/circulo.h:77:42: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   77 | int Circulo_Interior (tCirculo c, tPonto p);
      |                                   ~~~~~~~^
Resultados/JoaoHenrique/completo/main.c:17:15: warning: passing argument 1 of ‘Pto_Apaga’ from incompatible pointer type [-Wincompatible-pointer-types]
   17 |     Pto_Apaga(ponto);
      |               ^~~~~
      |               |
      |               struct ponto **
In file included from Resultados/JoaoHenrique/completo/main.c:2:
Resultados/JoaoHenrique/completo/ponto.h:37:24: note: expected ‘tPonto’ {aka ‘struct ponto *’} but argument is of type ‘struct ponto **’
   37 | void Pto_Apaga (tPonto p);
      |                 ~~~~~~~^
Resultados/JoaoHenrique/completo/main.c:18:19: warning: passing argument 1 of ‘Circulo_Apaga’ from incompatible pointer type [-Wincompatible-pointer-types]
   18 |     Circulo_Apaga(circulo);
      |                   ^~~~~~~
      |                   |
      |                   struct circulo **
In file included from Resultados/JoaoHenrique/completo/main.c:3:
Resultados/JoaoHenrique/completo/circulo.h:41:30: note: expected ‘tCirculo’ {aka ‘struct circulo *’} but argument is of type ‘struct circulo **’
   41 | void Circulo_Apaga (tCirculo c);
      |                     ~~~~~~~~~^
Resultados/JoaoHenrique/completo/ponto.c: In function ‘Pto_Cria’:
Resultados/JoaoHenrique/completo/ponto.c:30:14: error: ‘*ponto’ is a pointer; did you mean to use ‘->’?
   30 |         ponto->x = x;
      |              ^~
      |              ->
Resultados/JoaoHenrique/completo/ponto.c:31:14: error: ‘*ponto’ is a pointer; did you mean to use ‘->’?
   31 |         ponto->y = y;
      |              ^~
      |              ->
Resultados/JoaoHenrique/completo/ponto.c:32:16: warning: returning ‘struct ponto **’ from a function with incompatible return type ‘tPonto’ {aka ‘struct ponto *’} [-Wincompatible-pointer-types]
   32 |         return ponto;
      |                ^~~~~
